@@ -43,3 +43,5 @@ Contributors:
         - patch to enable atmega32u2 chips
     - Torsten Rottmann
         - patch to enable libusb 1.0 support
+    - Mitko
+        - patch to enable at32uc3b1512 and at32uc3b0512 chips
