@@ -37,7 +37,7 @@ at32uc3a0512, at32uc3a1512, at32uc3a0512es, at32uc3a1512es,
 at32uc3a364, at32uc3a364s, at32uc3a3128, at32uc3a3128s,
 at32uc3a3256, at32uc3a3256s, at32uc3b064, at32uc3b164,
 at32uc3b0128, at32uc3b1128, at32uc3b0256, at32uc3b1256,
-at32uc3b0256es, and at32uc3b1256es.
+at32uc3b0256es, at32uc3b1256es, at32uc3b1512, and at32uc3b0512.
 .SH USAGE
 There are no mechanisms for selecting which single device
 should be programmed, or to implement gang programming.
