@@ -63,6 +63,8 @@ enum targets_enum { tar_at89c51snd1c,
                     tar_at32uc3b1256,
                     tar_at32uc3b0256es,
                     tar_at32uc3b1256es,
+                    tar_at32uc3b0512,
+                    tar_at32uc3b1512,
                     tar_at32uc3a0128,
                     tar_at32uc3a1128,
                     tar_at32uc3a0256,
